[tool.poetry]
name = "lorisbind"
version = "0.0.1"
authors = ["Charles K. Neimog <charlesneimog@outlook.com>"]
description = "A Python binding (pybind11) for the Loris C++ library."
readme = "README.md"
repository = "https://github.com/charlesneimog/lorisbind"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "cmake>=3.18",
    "ninja",
]
build-backend = "setuptools.build_meta"
