[project]
name = "lorisbind"
version = "0.0.1"
authors = [{name = "Charles K. Neimog", email = "charlesneimog@outlook.com"}]
description = "A Python binding (pybind11) for the Loris C++ library."
readme = "README.md"
readme-content-type = "text/markdown"
repository = "https://github.com/charlesneimog/lorisbind"
requires-python = ">=3.9"

[build-system]
requires = [
    "cmake",
    "ninja",
    "pybind11",
    "scikit-build-core",
]
build-backend = "scikit_build_core.build"

